--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function getData(){
               table.appendChild(tr);
           })
         });
-    });
+    }).catch(err=>{alert("沒有這資料表")});
 
     
 };
